# HPC_2017_2

myCUDA/cudaexamples/imageCuda/: .CMakeLists.txt.swp  DisplayImage.sh  Makefile  cmake_install.cmake  res_imageTransform
myCUDA/cudaexamples/matmult/: matmult.cu  matmult.sh  matmult2.cu  myMatmult.cu  res_matmult  res_vecadd
parcial2/: .~lock.convolution.ods#  .~lock.measurement.ods#  convolution.ods  measurement.ods
parcial2/code/: CMakeCache.txt
parcial2/imageCuda/: .~lock.measurement.ods#  CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  DisplayImage.cu  DisplayImage.sh  DisplayImage_cu  Makefile  cmake_install.cmake  imgTransform.sh  measurement.ods  sobelFilter.cu  sobelFilterGCM.cu  sobelFilterGM.cu  sobel_GCSmem.cu  sobel_GCmem.cu
parcial2/src/: CMakeCache.txt  Makefile  cmake_install.cmake  sobel_GCSmem.cu
parcial2/src/constantMem/: CMakeCache.txt  Makefile  cmake_install.cmake  imgTransform.sh  res_imgTransform.txt  sobel_GCmem  sobel_GCmem.cu
parcial2/src/globalMem/: imgTransform.sh  res_imgTransform.txt  (+2 more)
parcial2/src/opencvGPU/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  imageTransform.sh  openCV_GPU  openCV_GPU.cpp  res_imgTransform.txt
proyecto/: README.txt
pruebas/: .omp_hello.c.swl  .omp_hello.c.swm  .omp_hello.c.swn  .omp_hello.c.swo  .omp_hello.c.swp  .omp_hello.swp  omp_hello.c
pruebas/imageCuda/: DisplayImage.cu
pruebas/matmult/: matmult  matmult.cu  matmult2
pruebas/openMP/: omp_hello.c
pruebas/vecadd/: res_vecadd  vecadd  vecadd.cu
taller1/: answer.txt  mat1.txt  mat2.txt  matGen  matGen.c  matMult  matMult.c  matg1.txt  matg2.txt
taller2/: matGen.h  matMult_omp  matMult_omp.c  matg1.txt  matg2.txt  vector_sum
(+7 files in other folders)
